Implement comprehensive security enhancements and fixes across the application
- Added SECURITY-FIXES-SUMMARY.md detailing resolved security issues and solutions.
- Created SECURITY.md for environment variable setup and security best practices.
- Developed ErrorBoundary component for secure error handling in React.
- Introduced error handling utilities in src/lib/error-handling.ts for secure error management.
- Implemented input validation and sanitization in src/lib/validation.ts.
- Enhanced Row Level Security (RLS) policies in supabase-security-enhancements.sql for database security.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,22 @@
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
+# Supabase Configuration
+# Get these values from your Supabase project dashboard: https://app.supabase.com/
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url_here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# Supabase Service Role Key (KEEP SECRET - only for server-side admin operations)
+# WARNING: This key bypasses Row Level Security - only use for admin operations
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
 # OpenRouter Configuration
+# Get your API key from: https://openrouter.ai/keys
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 OPENROUTER_MODEL=anthropic/claude-3.5-haiku
+
+# Application Configuration
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# Security Notes:
+# - NEXT_PUBLIC_ variables are exposed to the browser (safe for anon key)
+# - Never commit real API keys to version control
+# - Service role key should only be used for admin operations server-side
+# - Keep OpenRouter API key secret as it incurs costs
