--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crystalknows-clone",
+  "name": "personaflow",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "AI-powered personality insights platform for better communication",
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
@@ -22,6 +22,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "isomorphic-dompurify": "^2.26.0",
     "lucide-react": "^0.536.0",
     "next": "^15.4.5",
     "react": "^19.1.1",
